--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -107,7 +107,8 @@
        <add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 	  <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
-
+    <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
+	  
 	  <!--Desarrollo-->
 	  
     <add name="DefaultConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
