--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -100,7 +100,8 @@
   </entityFramework>
   <connectionStrings>
 	   <!--Productivo NUEVO-->
-	   <!--
+	  <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
+	  <!--
      <add name="DefaultConnection" connectionString="Server=10.122.161.232\productivo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
 	  <add name="cube_tkmmConnection" connectionString="Server=10.122.161.232\productivo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 	  <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
