2022-05-03 Se agrega modificación a formulario de empleados.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -4376,6 +4376,7 @@
     <Content Include="Content\manuales\Manual_Usuario_PM.pdf" />
     <Content Include="Content\plantillas_excel\plantilla_reporte.xlsx" />
     <Content Include="Content\plantillas_excel\plantilla_reporte_produccion_historial_cambios.xlsx" />
+    <Content Include="Content\manuales\Manual_Usuario_OT.pdf" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
