--- a/CódigoFuente/Bitacoras/packages.config
+++ b/CódigoFuente/Bitacoras/packages.config
@@ -3,5 +3,7 @@
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net472" />
   <package id="jQuery" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.3" targetFramework="net45" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
 </packages>
