--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\BgPlantillaUtil.cs" />
     <Compile Include="Util\BG_Status.cs" />
+    <Compile Include="Util\IT_MR_Status.cs" />
     <Compile Include="Util\MensajesSweetAlert.cs" />
     <Compile Include="Util\Meses.cs" />
     <Compile Include="Util\NotificacionesCorreo.cs" />
