--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -400,6 +400,8 @@
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MetadataModels\IT_Matriz_requerimientosMetadata.cs" />
+    <Compile Include="Models\MetadataModels\PartialClasses.cs" />
     <Compile Include="Models\mm_v3.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -580,6 +582,9 @@
     <Content Include="Content\build\images\loading.gif" />
     <Content Include="Content\build\js\custom.js" />
     <Content Include="Content\build\js\custom.min.js" />
+    <Content Include="Content\emails_plantillas\IT_MR_notificacion_autorizacion_sistemas.html" />
+    <Content Include="Content\emails_plantillas\IT_MR_notificacion_rechazo_solicitante.html" />
+    <Content Include="Content\emails_plantillas\IT_MR_notificacion_autorizacion_solicitante.html" />
     <Content Include="Content\emails_plantillas\IT_MR_notificacion_jefe.html" />
     <Content Include="Content\emails_plantillas\OT_finalizado.html" />
     <Content Include="Content\emails_plantillas\OT_en_proceso.html" />
@@ -6818,6 +6823,8 @@
     <Content Include="Views\IT_matriz_requerimientos\ListadoUsuarios.cshtml" />
     <Content Include="Views\IT_matriz_requerimientos\ListadoSolicitudes.cshtml" />
     <Content Include="Views\IT_matriz_requerimientos\Details.cshtml" />
+    <Content Include="Views\IT_matriz_requerimientos\Autorizar.cshtml" />
+    <Content Include="Views\IT_matriz_requerimientos\Cerrar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
