2022-05-20 Se sube primera versión para módulo IT.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -14,11 +14,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
-	  <!--Para envio de correo electronico-->
-	  <add key="smtpServer" value="pop4.lagermex.com.mx" />
-	  <add key="portEmail" value="25" />
-	  <add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx" />
-	  <add key="paswordEmail" value="" />
+    <!--Para envio de correo electronico-->
+    <add key="smtpServer" value="pop4.lagermex.com.mx" />
+    <add key="portEmail" value="25" />
+    <add key="emailSMTP" value="notificaciones.tkmm@lagermex.com.mx" />
+    <add key="paswordEmail" value="" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -29,9 +29,9 @@
       </system.Web>
   -->
   <system.web>
-	  <sessionState timeout="400" />
-	  <globalization uiCulture="es" culture="es-MX" />
-	  <compilation debug="true" targetFramework="4.5" />
+    <sessionState timeout="400" />
+    <globalization uiCulture="es" culture="es-MX" />
+    <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime maxRequestLength="20480" targetFramework="4.5" />
     <customErrors mode="RemoteOnly">
       <error redirect="~/Error/NotFound" statusCode="404" />
@@ -80,6 +80,10 @@
         <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.5022.0" newVersion="2.0.5022.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -99,32 +103,29 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-	   <!--Productivo NUEVO-->
-	  <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
-	  <!--
+    <!--Productivo NUEVO-->
+    <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
+    <!--
      <add name="DefaultConnection" connectionString="Server=10.122.161.232\productivo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	  <add name="cube_tkmmConnection" connectionString="Server=10.122.161.232\productivo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	  <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="cube_tkmmConnection" connectionString="Server=10.122.161.232\productivo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
        <add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.161.232\productivo;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
-	  <!--Productivo-->
-	   <!--
+    <!--Productivo-->
+    <!--
      <add name="DefaultConnection" connectionString="Server=192.168.10.156; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-	  <add name="cube_tkmmConnection" connectionString="Server=192.168.10.156; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	  <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="cube_tkmmConnection" connectionString="Server=192.168.10.156; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
        <add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	  <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
     <!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
-	  
-	  <!--Desarrollo-->
-	  
+    <!--Desarrollo-->
     <add name="DefaultConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	<add name="cube_tkmmConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="cube_tkmmConnection" connectionString="Server=192.168.10.156\dwtkmm; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="PortalthyssenkruppEntities" connectionString="metadata=res://*/Models.OldPortalContext.csdl|res://*/Models.OldPortalContext.ssdl|res://*/Models.OldPortalContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=Portalthyssenkrupp;persist security info=True;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="cube_tkmmEntities" connectionString="metadata=res://*/Models.Cube_tkmmModel.csdl|res://*/Models.Cube_tkmmModel.ssdl|res://*/Models.Cube_tkmmModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=cube_tkmm;user id=ThyssenTest;password=P0rt4l*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.10.156\dwtkmm;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	 
   </connectionStrings>
 </configuration>
